# iya

./: .dockerignore  .env.example  .env.example.manifest_v2_additions  .gitignore  APPLY_MANIFEST_V2.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
architecture/: planning-system.md
docs/: manifest_v2_refactor_notes.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_manifest_v2_core.py  0003_memory_fact_embeddings.py  0004_planning_system.py
prompts/: iya_system.md
src/iya_bot/: config.py  main.py
src/iya_bot/application/: dialogue.py  humanize.py  llm_router.py  memory_consolidation.py  memory_control.py  memory_retrieval.py  mode_router.py  ports.py  proactive.py  prompt_builder.py  prompt_loader.py  rate_limit.py  reflection.py  reminders.py  runtime_context.py  self_state.py
src/iya_bot/application/planning/: __init__.py  (+4 more)
src/iya_bot/domain/: enums.py  models.py
src/iya_bot/prompts/: iya_system.md
src/iya_next_clean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: planning_fakes.py  test_calendar_service.py  test_config.py  test_dialogue.py  test_handlers.py  test_humanize.py  test_llm_sampling.py  test_memory_consolidation.py  test_memory_retrieval.py  test_mode_router.py  test_notes_service.py  test_planning_service.py  test_prompt_builder_v2.py  test_prompt_loader.py  test_rate_limit.py  test_reflection.py  test_reminder_service.py  test_reminders.py  test_runtime_context.py  test_search.py  test_streaming.py  test_tools.py  test_workflow_engine.py
(+21 files in other folders)
