[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iya-next-clean"
version = "0.4.0"
description = "Clean architecture Telegram assistant prototype for Iya"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "SQLAlchemy>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "httpx>=0.27,<1",
    "APScheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iya_bot = ["prompts/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
